add randomTest1 to Makefile

--- a/projects/guilbeas/dominion/Makefile
+++ b/projects/guilbeas/dominion/Makefile
@@ -21,6 +21,8 @@ runtests: testDrawCard
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
+randomTest1: randomtestcard1.c dominion_helpers.h dominion.o rngs.o
+	gcc -o randomTest1 -g randomtestcard1.c dominion.o rngs.o $(CFLAGS)
 
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
