add randomTest3 rule and results rule to Makefile

--- a/projects/guilbeas/dominion/Makefile
+++ b/projects/guilbeas/dominion/Makefile
@@ -27,6 +27,16 @@ randomTest1: randomtestcard1.c dominion_helpers.h dominion.o rngs.o
 randomTest2: randomtestcard2.c dominion_helpers.h dominion.o rngs.o
 	gcc -o randomTest2 -g randomtestcard2.c dominion.o rngs.o $(CFLAGS)
 
+randomTest3: randomtestcard3.c dominion_helpers.h dominion.o rngs.o
+	gcc -o randomTest3 -g randomtestcard3.c dominion.o rngs.o $(CFLAGS)
+
+randomtestresults: randomTest1 randomTest2 randomTest3
+	./randomTest1 &> randomtestresults.out
+	./randomTest2 >> randomtestresults.out
+	./randomTest3 >> randomtestresults.out
+	gcov -b -f dominion.c >> randomtestresults.out
+	cat dominion.c.gcov >> randomtestresults.out
+
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
