add rule for unittest1

--- a/projects/guilbeas/goodmaal/dominion/Makefile
+++ b/projects/guilbeas/goodmaal/dominion/Makefile
@@ -24,6 +24,9 @@ runtests: testDrawCard
 randomtest1: randomtestcard1.c dominion.o rngs.o
 	gcc -o randomtest1 -g randomtestcard1.c dominion.o rngs.o $(CFLAGS)
 
+unittest1: unittest1.c dominion.o rngs.o
+	gcc -o unittest1.c -g unittest1.c dominion.o rngs.o $(CFLAGS)
+
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
