--- a/projects/guilbeas/goodmaal/dominion/Makefile
+++ b/projects/guilbeas/goodmaal/dominion/Makefile
@@ -24,8 +24,37 @@ runtests: testDrawCard
 randomtest1: randomtestcard1.c dominion.o rngs.o
 	gcc -o randomtest1 -g randomtestcard1.c dominion.o rngs.o $(CFLAGS)
 
+randomtest2: randomtestcard2.c dominion.o rngs.o
+	gcc -o randomtest2 -g randomtestcard2.c dominion.o rngs.o $(CFLAGS)
+
+randomtest3: randomtestcard3.c dominion.o rngs.o
+	gcc -o randomtest3 -g randomtestcard3.c dominion.o rngs.o $(CFLAGS)
+
 unittest1: unittest1.c dominion.o rngs.o
 	gcc -o unittest1 -g unittest1.c dominion.o rngs.o $(CFLAGS)
+
+unittest2: unittest2.c dominion.o rngs.o
+	gcc -o unittest2 -g unittest2.c dominion.o rngs.o $(CFLAGS)
+
+unittest3: unittest3.c dominion.o rngs.o
+	gcc -o unittest3 -g unittest3.c dominion.o rngs.o $(CFLAGS)
+
+unittest4: unittest4.c dominion.o rngs.o
+	gcc -o unittest4 -g unittest4.c dominion.o rngs.o $(CFLAGS)
+
+unittest5: unittest5.c dominion.o rngs.o
+	gcc -o unittest5 -g unittest5.c dominion.o rngs.o $(CFLAGS)
+
+runMyTests: unittest1 unittest2 unittest3 unittest4 unittest5 randomtest1 randomtest2 randomtest3
+	./unittest1 &> myResults.out
+	./unittest2 >> myResults.out
+	./unittest3 >> myResults.out
+	./unittest4 >> myResults.out
+	./unittest5 >> myResults.out
+	./randomtest1 >> myResults.out
+	./randomtest2 >> myResults.out
+	./randomtest3 >> myResults.out
+	gcov -b -f dominion.c >> myResults.out
 
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
